SDKs/twilio.com/twilio_bulkexports_v1/1.37.4/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            CreateExportCustomJobRequest req = new CreateExportCustomJobRequest() {{
                security = new CreateExportCustomJobSecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                pathParams = new CreateExportCustomJobPathParams() {{
                    resourceType = "sit";
                }};
                request = new CreateExportCustomJobCreateExportCustomJobRequest() {{
                    email = "voluptas";
                    endDay = "culpa";
                    friendlyName = "expedita";
                    startDay = "consequuntur";
                    webhookMethod = "dolor";
                    webhookUrl = "expedita";
                }};
            }};

            CreateExportCustomJobResponse res = sdk.createExportCustomJob(req);

            if (res.bulkexportsV1ExportExportCustomJob.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createExportCustomJob`
* `deleteJob`
* `fetchDay` - Fetch a specific Day.
* `fetchExport` - Fetch a specific Export.
* `fetchExportConfiguration` - Fetch a specific Export Configuration.
* `fetchJob`
* `listDay` - Retrieve a list of all Days for a resource.
* `listExportCustomJob`
* `updateExportConfiguration` - Update a specific Export Configuration.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
